# rag-compliance-evaluator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  report.xml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/corpus/: README.md  de-labor-law-overview.md  es-labor-law-overview.md  eu-parental-leave.md  eu-working-time-directive.md  fr-labor-law-overview.md  gdpr-employee-data-basics.md  nl-labor-law-overview.md
data/golden/: qa.yaml
src/app/: main.py  schemas.py
src/app/api/: routes_eval.py  routes_rag.py
src/app/core/: config.py
src/app/eval/: dataset.py  metrics.py  runner.py
src/app/rag/: embeddings.py  ingest.py  interfaces.py  llm.py  pipeline.py  retriever.py  store.py
src/app/ui/: app.js  index.html  style.css
tests/: test_api.py  test_eval.py  test_eval_metrics_extra.py  test_eval_runner.py  test_main.py  test_rag.py  test_rag_llm.py
