# If distributable and should be installable as a package 
#[build-system]
#requires = ["setuptools>=65.0", "wheel"]
#build-backend = "setuptools.build_meta"

[project]
name = "docker-dev-template"
version = "0.2.0"
requires-python = ">=3.11"
authors = [{name = "Vanessa Tsingunidis"}]

dependencies = [
    "fastapi>=0.110.0",
    "openai>=2.0.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.4.0",
    "mypy>=1.9.0",
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
]


[tool.setuptools.packages.find]
where = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--junitxml=report.xml"
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "S"]
ignore = ["E402"]


[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_no_return = true
ignore_missing_imports = false
pretty = true

