# If distributable and should be installable as a package 
#[build-system]
#requires = ["setuptools>=65.0", "wheel"]
#build-backend = "setuptools.build_meta"

[project]
name = "rag-compliance-evaluator"
version = "0.1.0"
requires-python = ">=3.11"
authors = [{name = "Vanessa Tsingunidis"}]

dependencies = [
    "fastapi==0.110.0",
    "openai==2.0.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.0.0",
    "pydantic-settings==2.0.0",
    "jinja2==3.1.0",
    "python-dotenv==1.0.0",
    "langchain-core==0.3.0",
    "langchain-text-splitters==0.3.0",
    "langchain-chroma==0.1.4",
    "chromadb==0.5.0",
    "sentence-transformers==3.0.0",
    "langchain-huggingface==0.1.0",
    "langchain-ollama==0.2.0",
    "langchain-anthropic==0.2.0",
    "langchain-openai==0.2.0",
    "pyyaml==6.0.0",
]

[dependency-groups]
dev = [
    "pytest==7.4.0",
    "pytest-asyncio==0.23.0",
    "pytest-cov==4.1.0",
    "httpx==0.27.0",
    "black==24.0.0",
    "isort==5.13.0",
    "ruff==0.4.0",
    "mypy==1.9.0",
    "respx==0.21.0",
]
test = [
    "pytest==7.4.0",
    "pytest-asyncio==0.23.0",
    "pytest-cov==4.1.0",
    "httpx==0.27.0",
    "respx==0.21.0",
]


[tool.setuptools.packages.find]
where = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--junitxml=report.xml"
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "S"]
ignore = ["E402"]



[tool.mypy]
python_version = "3.11"
strict = true
# --strict without disallow_untyped_calls: ML libraries (transformers, torch)
# have incomplete annotations; per-package overrides below handle them cleanly
disallow_untyped_calls = false
ignore_missing_imports = false
pretty = true

[[tool.mypy.overrides]]
# Heavy / partially-typed third-party libs: don't follow imports into them.
# follow_imports = "skip" keeps mypy from loading the multi-GB import graph
# (torch/transformers/langchain), which is the lightweight setting that avoids
# the editor/CI OOM. They are treated as Any at the boundary.
module = [
    "transformers.*",
    "torch.*",
    "sentence_transformers.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_chroma.*",
    "langchain_huggingface.*",
    "langchain_ollama.*",
    "langchain_anthropic.*",
    "langchain_openai.*",
    "langchain_text_splitters.*",
    "chromadb.*",
    "yaml",
]
disallow_untyped_calls = false
follow_imports = "skip"
ignore_missing_imports = true

