[project]
name = "rag-compliance-evaluator"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
authors = [{name = "Vanessa Tsingunidis"}]
dependencies = [
    "fastapi~=0.136.0",
    "openai~=2.38.0",
    "uvicorn[standard]~=0.48.0",
    "pydantic~=2.13.0",
    "pydantic-settings~=2.14.0",
    "jinja2~=3.1.0",
    "python-dotenv~=1.2.0",
    "langchain-core~=1.4.0",
    "langchain-text-splitters~=1.1.0",
    "langchain-chroma~=1.1.0",
    "chromadb~=1.5.0",
    "sentence-transformers~=5.5.0",
    "langchain-huggingface~=1.2.0",
    "langchain-ollama~=1.1.0",
    "langchain-anthropic~=1.0.0",
    "langchain-openai~=1.2.0",
    "pyyaml>=6.0",
]

# sentence-transformers depends on torch. Pin to the CPU-only wheel (~200 MB
# vs ~2 GB for the CUDA build) so Docker builds on CI don't exhaust disk space.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
test = [
    "pytest~=8.3.0",
    "pytest-asyncio~=1.2.0",
    "pytest-cov~=7.1.0",
    "httpx~=0.28.0",
    "respx~=0.23.0",
]
dev = [
    { include-group = "test" },
    "black~=26.5.0",
    "isort~=8.0.0",
    "ruff~=0.15.0",
    "mypy~=2.1.0",
]


[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--junitxml=report.xml"
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "S"]
ignore = ["E402"]



[tool.mypy]
python_version = "3.11"
strict = true
# --strict without disallow_untyped_calls: ML libraries (transformers, torch)
# have incomplete annotations; per-package overrides below handle them cleanly
disallow_untyped_calls = false
ignore_missing_imports = false
pretty = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "sentence_transformers.*",
    "langchain.*",
    "langchain_core.*",
    "langchain_chroma.*",
    "langchain_huggingface.*",
    "langchain_ollama.*",
    "langchain_anthropic.*",
    "langchain_openai.*",
    "langchain_text_splitters.*",
    "chromadb.*",
    "yaml",
]
disallow_untyped_calls = false
follow_imports = "skip"
ignore_missing_imports = true
